# SoulLib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Evolución de SoulLib_ Hoja de Ruta Técnica.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: BenchmarkMain.cpp  CMakeLists.txt  ContainersBenchmarks.cpp  MemoryBenchmarks.cpp
cmake/: SoulLibConfig.cmake.in
demo/: CMakeLists.txt  README.md  main.cpp
docs/: Architecture.md  BUILD_DOCUMENTATION.md  BUILD_FIX_SUMMARY.md  CI_FIX_SUMMARY.md  COMMIT_STRATEGY.md  CXX23_Migration_Checklist.md  Doxyfile  EXECUTION_SUMMARY.md  Expected_Migration_Notes.md  PUSH_SUMMARY.md  RELEASE_NOTES_v0.3.0.md
examples/: CMakeLists.txt  ContainerMemoryExample.cpp
include/: SoulLibExport.h  utility.h
include/Async/: AsyncModule.h  Task.h
include/FileSystem/: FileSystemModule.h
include/FileSystem/Core/: AsyncFileManager.h  FileManager.h  IFileManager.h
include/FileSystem/Encryption/: AesEncryption.h  IEncryptionStrategy.h  NoEncryption.h
include/FileSystem/IO/: BinaryFileIO.h  FileResult.h  IAsyncFileIO.h  IFileIO.h  JsonFileIO.cpp  JsonFileIO.h  ThreadPoolAsyncFileIO.h
include/FileSystem/Serialization/: BinarySerializer.h  ISerializer.h
include/Memory/Core/: ArenaAllocator.h  IMemoryManager.h  MemoryAllocator.h  MemoryManager.h  MemoryRegistry.h  MemoryStatistics.h  MemoryTag.h  PoolAllocator.h  TaggedMemoryAllocator.h
include/Memory/Profiler/: MemoryProfiler.h  MemoryVisualizer.h
include/Memory/SmartPointers/: SharedPtr.h  SmartPtrFactory.h  UniquePtr.h  WeakPtr.h
include/Networking/: ByteOrder.h  Endpoint.h  NetworkManager.h  NetworkingModule.h  Packet.h  Platform.h  TcpTransport.h  Transport.h  UdpTransport.h
include/Utils/: JsonUtils.h
include/containers/: ContainerSystem.h
include/containers/Adapters/: SoulPriorityQueue.h  SoulStack.h
include/containers/Algorithms/: Searcher.h  Sorter.h
include/containers/Associative/: SoulFlatMap.h  SoulMap.h  SoulMultimap.h  SoulMultiset.h  SoulSet.h
include/containers/Core/: ContainerManager.h  ContainerMemoryOptimizer.h  ContainerTags.h  IContainer.h
include/containers/Sequential/: SoulArray.h  SoulDeque.h  SoulForwardList.h  SoulList.h  SoulVector.h
include/containers/Unordered/: SoulUnorderedMap.h  SoulUnorderedSet.h
include/containers/Utility/: ContainerMemoryUtils.h
include/debug/: AssertHandler.h  Debug.h  DebugConfig.h  DebugTimer.h  Formatter.h  LogChannel.h  LogEntry.h  LogLevel.h  SourceInfo.h  Timestamp.h
include/network/client/: Client.h
include/network/host/: HostServer.h
include/time/: EventScheduler.h  FrameScheduler.h  ITimeTrackable.h  TimeService.h  TimedEvent.h  TimedTask.h  TimerManager.h
src/: utility.cpp
src/Async/: TaskScheduler.cpp
src/FileSystem/Core/: AsyncFileManager.cpp  FileManager.cpp
src/FileSystem/Encryption/: AesEncryption.cpp  NoEncryption.cpp
src/FileSystem/IO/: BinaryFileIO.cpp  ThreadPoolAsyncFileIO.cpp
src/Memory/Core/: MemoryManager.cpp  MemoryRegistry.cpp
src/Memory/Modules/: MemoryStatistics.ixx  MemoryStatisticsImport.cpp
src/Memory/Profiler/: MemoryProfiler.cpp  MemoryVisualizer.cpp
src/Networking/: Endpoint.cpp  NetworkManager.cpp  TcpTransport.cpp  UdpTransport.cpp
src/Utils/: JsonUtils.cpp
src/containers/: ContainerMemoryProfiler.cpp
src/containers/Core/: ContainerManager.cpp
src/containers/Sequential/: SoulDeque.cpp  SoulForwardList.cpp  SoulList.cpp  SoulVector.cpp
src/debug/: AssertHandler.cpp  Debug.cpp  DebugAPI.cpp  DebugConfig.cpp  DebugTimer.cpp  Formatter.cpp  LogChannel.cpp  LogEntry.cpp  LogLevel.cpp  SourceInfo.cpp
src/network/client/: Client.cpp
src/network/host/: HostServer.cpp
src/time/: EventScheduler.cpp  FrameScheduler.cpp  ITimeTrackable.cpp  TimeService.cpp  TimedEvent.cpp  TimedTask.cpp  TimerManager.cpp
test/: CMakeLists.txt
test/FileSystem/Core/: FileManagerTest.cpp
test/FileSystem/Encryption/: NoEncryptionTest.cpp
test/FileSystem/IO/: AsyncFileManagerTests.cpp  BinaryFileIOTest.cpp
test/Memory/: ArenaAllocatorTest.cpp  MemoryManagerTest.cpp  MemoryProfilerTest.cpp  MemoryVisualizerTest.cpp  PoolAllocatorTest.cpp
test/containers/Adapters/: AdaptersContainersTest.cpp
test/containers/Algorithms/: AlgorithmsTest.cpp
test/containers/Associative/: AssociativeContainersTest.cpp
test/containers/Core/: ContainerManagerTest.cpp
test/containers/Sequential/: SequentialContainersTest.cpp
test/containers/Unordered/: UnorderedContainersTest.cpp
test/containers/Utility/: UtilityContainersTest.cpp
test/debug/: AssertHandlerTest.cpp  DebugAPITest.cpp  DebugManagerTest.cpp  DebugTimerTest.cpp  FormatterTest.cpp  LogChannelTest.cpp  TimestampTest.cpp
test/network/: ClientTest.cpp  HostServerTest.cpp  IntegrationTest.cpp  NetworkManagerTests.cpp
test/time/: FrameSchedulerTests.cpp  TimeServiceTest.cpp
tools/DagVisualizer/: CMakeLists.txt  DagVisualizer.cpp  README.md
tools/MemoryVisualizer/: CMakeLists.txt  main.cpp
